fix: moves components to packages

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
+    "storybook": "turbo -F demo run storybook",
+    "chromatic": "turbo -F demo run chromatic",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
