--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@repo/ui": "workspace:*"
+    "@repo/ui": "workspace:*",
+    "@repo/foundations": "workspace:*"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
