--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@repo/ui",
   "version": "0.0.0",
+  "type": "module",
   "exports": {
     ".": "./index.ts",
     "./Button": "./components/Button.tsx",
@@ -16,10 +17,13 @@
     "eslint": "^8.57.0",
     "typescript": "^5.3.3",
     "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0"
+    "@types/react-dom": "^18.3.0",
+    "@storybook/test": "^8.2.6",
+    "@storybook/react": "^8.2.6"
   },
   "peerDependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@repo/foundations": "workspace:*"
   }
 }
