--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: 20
       - name: Install dependencies
+        run: npm install -g pnpm
         run: pnpm install --frozen-lockfile
       - name: Build
         run: pnpm build
@@ -23,3 +24,4 @@ jobs:
         with:
           # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          storybookConfigDir: apps/demo/.storybook
