--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,8 @@
       ]
     },
     "storybook": {},
+    "build-storybook": {},
+    "chromatic": {},
     "lint": {},
     "dev": {
       "cache": false,
