WIP: experimental dark mode detection

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -16,7 +16,8 @@
     "@repo/foundations": "workspace:*",
     "@repo/ui": "workspace:*",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
@@ -29,6 +30,7 @@
     "@storybook/react": "^8.3.5",
     "@storybook/react-vite": "^8.3.5",
     "@storybook/test": "^8.3.5",
+    "@storybook/testing-library": "^0.2.2",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
