--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "exports": {
     ".": "./index.ts",
-    "./styles": "./styles/index.css"
+    "./styles": "./styles/index.css",
+    "./styles/index.css": "./styles/index.css"
   },
   "scripts": {
     "build": "radius-toolkit generate tokens.json -o styles/index.css"
@@ -13,7 +14,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "registry": "localhost:4873",
   "devDependencies": {
     "radius-toolkit": "^0.6.2"
   }
