--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: pnpm ci
+        run: pnpm i --frozen-lockfile 
 
       - name: Lint, Build, and Test All
         if: needs.detect-changes.outputs.affected == 'all'
