feat: convert vector to svg

--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -3,6 +3,7 @@
   "version": "4.1.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "exports": {
     ".": "./index.ts",
     "./styles": "./index.css"
@@ -10,7 +11,8 @@
   "scripts": {
     "build": "radius-toolkit generate tokens.json -o styles/index.css",
     "build:custom": "radius-toolkit generate tokens.json -c myCustomTemplate -T ./templates -o styles/vector.json",
-    "build:tailwind": "radius-toolkit generate tokens.json -t tailwind"
+    "build:tailwind": "radius-toolkit generate tokens.json -t tailwind",
+    "g": "node ./generate-icons.mjs"
   },
   "keywords": [],
   "author": "",
